# Basicness

./: .gitignore  README.md  paper.tex  pyproject.toml  requirements.txt  run_pipeline.py
.github/: instructions.md
data/concepts/: features_per_ILI.csv
data/human_annotations/: culture_annotation_datasets_annotated_human_en.csv  culture_annotation_datasets_annotated_human_es.csv  culture_annotation_datasets_annotated_human_it.csv  culture_annotation_datasets_annotated_human_nb.csv
data/model_annotations/: culture_annotation_datasets_silver_annotated.csv
data/model_annotations/old/: culture_annotation_datasets_silver_annotated_complex.csv
results/agreement_metrics/: agreement_results.xlsx  basicness_scores_mean.csv  feature_human_agreement.json  feature_human_agreement.xlsx  model_consistency.csv  silver_human_agreement_results.json
results/correlation/filtered/: pearson_correlations.csv  pearson_p_values.csv  spearman_correlations.csv  (+1 more)
results/pairwise_human_agreement_results/: README.md  full_results.csv  latex_table_standalone.tex  pairwise_human_agreement_table.tex  summary_statistics.csv
results/pairwise_llm_agreement_results/: README.md  full_results.csv  latex_table_standalone.tex  model_rankings.csv  pairwise_agreement_table.tex  summary_statistics.csv
src/analysis/: agreements.py  binary_agreements.py  correlation.py  pairwise_human_agreement.py  pairwise_llm_agreement.py
src/classification/: OMWMetricsExtractor.py  analyzer.py  omw_integrated_test_copy.ipynb  utils.py  utils_omw.py  utils_plot.py
src/processing/: silver_processor.py
(+164 files in other folders)
