[project]
name = "basicness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pandasql>=0.7.3",
    "pingouin>=0.6.0",
    "pron-difficulty>=0.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "ujson>=5.11.0",
    "wn>=1.0.0",
    "wordfreq>=3.1.1",
    "xlsxwriter>=3.2.9",
]
